--- a/src/main/resources/templates/carrinhoCompras.html
+++ b/src/main/resources/templates/carrinhoCompras.html
@@ -9,7 +9,7 @@
   </head>
   <style>
     .bodyWinery {
-            background-image: url('../static/imagens/3.png') !important;
+            background-image: url('https://play.hbomax.com/default-3840x2160.png') !important;
             background-size: cover !important;
             background-repeat: no-repeat !important;
             background-attachment: fixed !important;
@@ -27,46 +27,69 @@
     object-fit: cover; /* Isso mantém a proporção e cobre a área especificada */
   }
 
+  .botaoPadrao {
+    background: linear-gradient(to bottom, #4F0599, #7A0707);
+    border: none;
+  }
+
   </style>
 
-  <body style="background-color: #141418;">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary corFundo">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/Winery">
-                <img src="../static/imagens/logoWinery250x250new.png" width="150px" alt="Logo da Winery">
-            </a>
+  <body class="bodyWinery">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: transparent !important; margin-right: 15px; margin-left: 15px; padding-top: 20px !important;">
+      <div class="container-fluid d-flex justify-content-center">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link text-white" href="/estoque/listarProdutos">
+                Vinhos
+              </a>
+            </li>
+  
+            <li class="nav-item">
+              <a class="nav-link text-white" href="/estoque/listarProdutos">
+                Vinicolas
+              </a>
+            </li>
+  
+            <li class="nav-item">
+              <a class="nav-link text-white" href="/estoque/listarProdutos">
+                Espumante
+              </a>
+            </li>
+          </ul>
+          
+          <a class="navbar-brand" href="/Winery" style="position: absolute; left: 50%; transform: translateX(-50%);">
+            <img th:src="@{/imagens/logoWinery250x250new.png}" width="175px" alt="Logo da Winery">
+          </a>
     
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-    
-    
-                </ul>
-    
-                <ul class="navbar-nav ml-auto">
-    
-                    <li class="nav-item ml-auto">
-                        <a class="nav-link text-white" href="#">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
-                                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                            </svg>
-                            Carrinho
-                        </a>
-                    </li>
-                   
-                    <li class="nav-item ml-auto">
-                        <a class="nav-link text-white" href="/authentication/login" >
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
-                                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
-                              </svg>
-                            Entrar
-                        </a>
-                    </li>
-                </ul>
-            </div>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item ml-auto">
+              <a class="nav-link text-white" href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                </svg>
+                Carrinho
+              </a>
+            </li>
+  
+            <li class="nav-item ml-auto">
+              <a class="nav-link text-white" href="/authentication/login">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-person-fill" viewBox="0 0 16 16">
+                  <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
+                </svg>
+                Entrar
+              </a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
     <div class="container">
@@ -86,11 +109,78 @@
                   <input type="text" class="form-control" id="" placeholder="Inserir CEP">
                 </div>
                 <div class="col-auto">
-                  <button type="submit" class="btn btn-primary mb-3">OK</button>
+                  <button type="submit" class="btn btn-primary mb-3 botaoPadrao">OK</button>
                 </div>
               </form>
         </div>
         
+    </div>
+
+    <div class="container" id="divEndereco">
+      <div class="row mt-2">
+        <div class="col-12 col-md-1">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            class="bi bi-truck text-white" viewBox="0 0 16 16">
+            <path
+              d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
+          </svg>
+        </div>
+        <div class="col-12 col-md-10">
+          <h4 class="text-white">Frete:</h4>
+        </div>
+      </div>
+      <hr class="text-white">
+      <ul class="list-group mb-3" style="background-color: transparent; border: none !important;">
+        <li class="list-group-item py-3" style="background-color: #1e1a28; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;">
+          <div class="row g-3">
+            <h5 class="text-white">Para receber no Endereço:</h5>
+            <div class="col-8 col-md-9 col-lg-6"> <!-- Aumente a largura dessa coluna -->
+              <small class="text-white">Rua Ferreiropolis,</small> <br>
+              <small class="text-white">Apartamento 22 Bloco 6,</small> <br>
+              <small class="text-white">Jardim Vaz de Lima,</small> <br>
+              <small class="text-white">CEP 05833-120 - São Paulo, SP. </small> <br>
+              <button type="button" class="btn btn-outline-info mt-4" style="padding: 7px !important;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil"
+                  viewBox="0 0 16 16">
+                  <path
+                    d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
+                </svg>
+                Alterar
+              </button>
+            </div>
+            <div class="col-4 col-md-3 col-lg-5">
+              <div class="form-check d-flex align-items-center">
+                <input class="form-check-input me-3" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                <label class="form-check-label text-white mb-0" for="flexRadioDefault1">
+                  <b>Entrega Padrão</b> - Até 3 dias úteis
+                </label>
+                <div class="text-end text-white ms-auto">
+                  <small>R$ 150,00</small>
+                </div>
+              </div>
+              <div class="form-check d-flex align-items-center">
+                <input class="form-check-input me-3" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                <label class="form-check-label text-white mb-0" for="flexRadioDefault2">
+                  <b>Entrega Expressa</b> - Até 2 dias úteis
+                </label>
+                <div class="text-end text-white ms-auto">
+                  <small>R$ 10,00</small>
+                </div>
+              </div>
+              <div class="form-check d-flex align-items-center">
+                <input class="form-check-input me-3" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+                <label class="form-check-label text-white mb-0" for="flexRadioDefault3">
+                  <b>Entrega Agendada</b> - Até 20 dias úteis
+                </label>
+                <div class="text-end text-white ms-auto">
+                  <small>R$ 100,00</small>
+                </div>
+              </div>
+            </div>
+  
+  
+        </li>
+      </ul>
     </div>
 
     <div class="container">
@@ -110,9 +200,9 @@
     </div>
 
     <!-- Remove the container if you want to extend the Footer to full width. -->
-<div class="my-5 border-top bg-body-tertiary corFundo" >
+<div class="bg-body-tertiary " style="background-color: transparent !important; margin-top: 100px;">
     <!-- Footer -->
-    <footer class="text-center text-lg-start text-white bg-body-tertiary corFundo">
+    <footer class="text-center text-lg-start text-white" style="background-color: transparent !important;">
       <!-- Grid container -->
       <div class="container p-4 pb-0">
         <!-- Section: Links -->
@@ -224,7 +314,7 @@
       <!-- Copyright -->
       <div
            class="text-center p-3"
-           style="background-color: rgba(0, 0, 0, 0.2)"
+           style="background-color: transparent !important;"
            >
         © 2023 Copyright por Winery
         
@@ -298,7 +388,7 @@
           const valorItem = parseFloat(item.preco); // Alterado para mostrar o valor do item
   
           const itemHTML = `
-            <li class="list-group-item py-3" style="background-color: transparent;">
+            <li class="list-group-item py-3 mb-3" style="background-color: #1e1a28; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;">
               <div class="row g-3">
                 <div class="col-4 col-md-3 col-lg-2">
   <a href="#">
@@ -348,12 +438,12 @@
         const valorFrete = 100.0; // Defina o valor do frete
   
         carrinhoLista.innerHTML += `
-          <li class="list-group-item py-3" style="background-color: transparent;">
+          <li class="list-group-item py-3" style="background-color: #1e1a28; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;">
             <div class="text-end">
               <h4 class="text-white mb-3">Valor Total: R$ ${valorTotalCarrinho.toFixed(2)}</h4>
               <h5 class="text-white mb-3">Valor Frete: R$ ${valorFrete.toFixed(2)}</h5>
               <a href="" class="btn btn-outline-success btn-lg">Continuar Comprando</a>
-              <button class="btn btn-danger btn-lg">Ir para Pagamento</button>
+              <button class="btn btn-danger btn-lg botaoPadrao">Ir para Pagamento</button>
             </div>
           </li>
         `;
