--- a/src/main/resources/templates/carrinhoCompras.html
+++ b/src/main/resources/templates/carrinhoCompras.html
@@ -94,14 +94,15 @@
 
     <div class="container">
         <div class="row mt-3">
-            <div class="col-12 col-md-1">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill text-white" viewBox="0 0 16 16">
+            <div class="col-12 col-md-12">
+              <div class="d-flex align-items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-geo-alt-fill text-white" viewBox="0 0 16 16">
                     <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
                   </svg>
+                  <h4 class="text-white ml-2 ms-4">Selecione o Endereço</h4>
+                </div>
             </div>
-            <div class="col-12 col-md-10">
-                <h4 class="text-white">Selecione o Endereço</h4>
-            </div>
+            
 
             <form class="row g-3">
                 <div class="col-auto">
@@ -118,20 +119,21 @@
 
     <div class="container" id="divEndereco">
       <div class="row mt-2">
-        <div class="col-12 col-md-1">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+        <div class="col-12 col-md-12">
+          <div class="d-flex align-items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
             class="bi bi-truck text-white" viewBox="0 0 16 16">
             <path
               d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5v-7zm1.294 7.456A1.999 1.999 0 0 1 4.732 11h5.536a2.01 2.01 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456zM12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
-          </svg>
+            </svg>
+            <h4 class="text-white ml-2 ms-4">Frete:</h4>
+          </div>
         </div>
-        <div class="col-12 col-md-10">
-          <h4 class="text-white">Frete:</h4>
-        </div>
+        
       </div>
       <hr class="text-white">
       <ul class="list-group mb-3" style="background-color: transparent; border: none !important;">
-        <li class="list-group-item py-3" style="background-color: #1e1a28; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;">
+        <li class="list-group-item py-3 mb-3" style="background-color: #1e1a28; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;">
           <div class="row g-3">
             <h5 class="text-white">Para receber no Endereço:</h5>
             <div class="col-8 col-md-9 col-lg-6"> <!-- Aumente a largura dessa coluna -->
@@ -139,13 +141,55 @@
               <small class="text-white">Apartamento 22 Bloco 6,</small> <br>
               <small class="text-white">Jardim Vaz de Lima,</small> <br>
               <small class="text-white">CEP 05833-120 - São Paulo, SP. </small> <br>
-              <button type="button" class="btn btn-outline-info mt-4" style="padding: 7px !important;">
+            </div>
+            <div class="col-4 col-md-3 col-lg-5">
+              <div class="form-check d-flex align-items-center">
+                <input class="form-check-input me-3" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                <label class="form-check-label text-white mb-0" for="flexRadioDefault1">
+                  <b>Entrega Padrão</b> - Até 3 dias úteis
+                </label>
+                <div class="text-end text-white ms-auto">
+                  <small>R$ 150,00</small>
+                </div>
+              </div>
+              <div class="form-check d-flex align-items-center">
+                <input class="form-check-input me-3" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+                <label class="form-check-label text-white mb-0" for="flexRadioDefault2">
+                  <b>Entrega Expressa</b> - Até 2 dias úteis
+                </label>
+                <div class="text-end text-white ms-auto">
+                  <small>R$ 10,00</small>
+                </div>
+              </div>
+              <div class="form-check d-flex align-items-center">
+                <input class="form-check-input me-3" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+                <label class="form-check-label text-white mb-0" for="flexRadioDefault3">
+                  <b>Entrega Agendada</b> - Até 20 dias úteis
+                </label>
+                <div class="text-end text-white ms-auto">
+                  <small>R$ 100,00</small>
+                </div>
+              </div>
+            </div>
+  
+  
+        </li>
+        
+        <li class="list-group-item py-3 mb-3" style="background-color: #1e1a28; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;">
+          <div class="row g-3">
+            <h5 class="text-white">Para receber no Endereço:</h5>
+            <div class="col-8 col-md-9 col-lg-6"> <!-- Aumente a largura dessa coluna -->
+              <small class="text-white">Rua Ferreiropolis,</small> <br>
+              <small class="text-white">Apartamento 22 Bloco 6,</small> <br>
+              <small class="text-white">Jardim Vaz de Lima,</small> <br>
+              <small class="text-white">CEP 05833-120 - São Paulo, SP. </small> <br>
+              <button type="button" class="btn btn-outline-info mt-4" style="padding: 7px !important;" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil"
                   viewBox="0 0 16 16">
                   <path
                     d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
                 </svg>
-                Alterar
+                Selecionar outro Endereço
               </button>
             </div>
             <div class="col-4 col-md-3 col-lg-5">
@@ -180,24 +224,181 @@
   
   
         </li>
+
       </ul>
     </div>
 
     <div class="container">
         <div class="row mt-2">
-            <div class="col-12 col-md-1">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-basket3-fill text-white" viewBox="0 0 16 16">
+            <div class="col-12 col-md-12">
+              <div class="d-flex align-items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-basket3-fill text-white" viewBox="0 0 16 16">
                     <path d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6h1.717L5.07 1.243a.5.5 0 0 1 .686-.172zM2.468 15.426.943 9h14.114l-1.525 6.426a.75.75 0 0 1-.729.574H3.197a.75.75 0 0 1-.730-.574z"/>
                 </svg>
+                <h4 class="text-white ml-2 ms-4">Produto e Serviço</h4>
+              </div>
             </div>
-            <div class="col-12 col-md-10">
-                <h4 class="text-white">Produto e Serviço</h4>
-            </div>
+            
         <hr class="text-white">
         <ul class="list-group mb-3" style="background-color: transparent;" id="carrinho-lista">
         </ul>
       </div>
     </div>
+
+    <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+      <div class="modal-dialog modal-xl modal-dialog-centered" >
+        <div class="modal-content" style="background-color: #2c263a; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;">
+          <div class="modal-header">
+            <div class="col-10 col-md-10">
+              <div class="d-flex align-items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-geo-alt-fill text-white" viewBox="0 0 16 16">
+                    <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                  </svg>
+                  <h4 class="text-white ml-2 ms-4">Selecione o Endereço</h4>
+                </div>
+            </div>
+            <button type="button" class="btn-close p-3" data-bs-dismiss="modal" aria-label="Close" style="color: white !important;"></button>
+          </div>
+          <div class="modal-body">
+            <div class="container">
+              <div class="row">
+                <div class="col-4">
+                  <div class="card-body p-3" style="background-color: #1e1a28; border: 1px !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important; border-radius: 14px;">
+                    <div class="d-flex justify-content-between">
+                        
+                    </div>
+                    <hr class="text-white">
+                    <h6 class="text-white">Rua Selma Kurtz 21</h6>
+                    <h6 class="text-white">Complemento</h6>
+                    <h6 class="text-white">Jardim Maria Luiza</h6>
+                    <h6 class="text-white">04434010</h6>
+                    <h6 class="text-white">São Paulo - SP </h6>
+                    <div class="d-flex justify-content-between">
+                        <a href="#" class="card-link">Remover</a>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio">
+
+                            <label class="form-check-label text-white">
+                                Definir como padrão
+                            </label>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-4">
+                  <div class="card-body p-3" style="background-color: #1e1a28; border: 1px !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important; border-radius: 14px;">
+                    <div class="d-flex justify-content-between">
+                        
+                    </div>
+                    <hr class="text-white">
+                    <h6 class="text-white">Rua Selma Kurtz 21</h6>
+                    <h6 class="text-white">Complemento</h6>
+                    <h6 class="text-white">Jardim Maria Luiza</h6>
+                    <h6 class="text-white">04434010</h6>
+                    <h6 class="text-white">São Paulo - SP </h6>
+                    <div class="d-flex justify-content-between">
+                        <a href="#" class="card-link">Remover</a>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio">
+
+                            <label class="form-check-label text-white">
+                                Definir como padrão
+                            </label>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-4">
+                  <div class="card-body p-3" style="background-color: #1e1a28; border: 1px !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important; border-radius: 14px;">
+                    <div class="d-flex justify-content-between">
+                        
+                    </div>
+                    <hr class="text-white">
+                    <h6 class="text-white">Rua Selma Kurtz 21</h6>
+                    <h6 class="text-white">Complemento</h6>
+                    <h6 class="text-white">Jardim Maria Luiza</h6>
+                    <h6 class="text-white">04434010</h6>
+                    <h6 class="text-white">São Paulo - SP </h6>
+                    <div class="d-flex justify-content-between">
+                        <a href="#" class="card-link">Remover</a>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio">
+
+                            <label class="form-check-label text-white">
+                                Definir como padrão
+                            </label>
+                        </div>
+                    </div>
+                  </div>
+                </div>
+                
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary botaoPadrao" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Novo Endereço</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+      <div class="modal-dialog modal-xl modal-dialog-centered">
+        <div class="modal-content" style="background-color: #2c263a; border: none !important; box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5) !important;">
+          <div class="modal-header">
+            <div class="col-10 col-md-10">
+              <div class="d-flex align-items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-geo-alt-fill text-white" viewBox="0 0 16 16">
+                    <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                  </svg>
+                  <h4 class="text-white ml-2 ms-4">Novo Endereço</h4>
+                </div>
+            </div>
+            <button type="button" class="btn-close p-3" data-bs-dismiss="modal" aria-label="Close" style="color: white !important;"></button>
+          </div>
+          <div class="modal-body">
+            <form class="row g-3">
+              <div class="col-6">
+                  <label for="" class="form-label text-white">Logradouro</label>
+                  <input type="text" class="form-control" id="inputLogradouro" >
+                </div>
+                <div class="col-2">
+                    <label for="" class="form-label text-white">Numero</label>
+                    <input type="text" class="form-control" id="inputNumero">
+                  </div>
+                <div class="col-4">
+                    <label for="" class="form-label text-white">Complemento</label>
+                    <input type="text" class="form-control" id="inputComplemento">
+                  </div>
+                <div class="col-md-4">
+                    <label for="" class="form-label text-white">Bairro</label>
+                    <input type="text" class="form-control" id="inputBairro">
+                  </div>
+                <div class="col-md-3">
+                    <label for="" class="form-label text-white">CEP</label>
+                    <input type="text" class="form-control" id="inputCep" placeholder="Somente números" minlength="8" maxlength="8">
+                </div>
+                <div class="col-md-1">
+                  <label for="" class="form-label text-white">UF</label>
+                  <input type="text" class="form-control" id="inputUf" maxlength="2">
+                </div>
+                <div class="col-md-4">
+                  <label for="" class="form-label text-white">Cidade</label>
+                  <input type="text" class="form-control" id="inputCidade">
+                </div>
+                <div class="text-center" >
+                <button class="btn btn-primary botaoPadrao" style="width: 300px !important;">Cadastrar Novo Endereço</button>
+              </div>
+          </form>
+          </div>
+          <!-- <div class="modal-footer">
+            <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back to first</button>
+          </div> -->
+        </div>
+      </div>
+    </div>
+
 
     <!-- Remove the container if you want to extend the Footer to full width. -->
 <div class="bg-body-tertiary " style="background-color: transparent !important; margin-top: 100px;">
